tests/snapshots/examples_fixtures/type_system__failing__78_hm_inline_call_no_runtime_fallback.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/78_hm_inline_call_no_runtime_fallback.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `_x` does not match its type annotation.

  examples/type_system/failing/78_hm_inline_call_no_runtime_fallback.flx:30:23
   |
30 |     let _x: String = (/(n: Int) -> n)(1)
   |                       ^^^^^^^^^^^^^^^^^^
   |                       ------------------ this value has type `Int`

   |             ------ but `_x` was annotated as `String`

Note:
  annotated type: String
  value type: Int

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
== stdout ==
<not executed>
